[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.17",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "protobuf==3.20.3",
    "streamlit>=1.57.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
